# mario-kart

./: .gitignore  .gitmodules  README.md  env_utils.py  pyproject.toml  requirements.txt  trace.py
OUTPUT/: plot_collision.py  plot_mario.py
OUTPUT/ARR 2026/SuperMarioKart-Snes-2025-11-03_22-25-04/: 2.monitor.csv  3.monitor.csv
OUTPUT/ARR 2026/SuperMarioKart-Snes-2025-11-05_08-35-01/: 1.monitor.csv  3.monitor.csv  5.monitor.csv  playback_trace00.csv  progress.csv
OUTPUT/ARR2026/SuperMarioKart-Snes-2025-11-03_22-25-04/: 0.monitor.csv  1.monitor.csv  4.monitor.csv  5.monitor.csv  events.out.tfevents.1762226704.Sage.13880.0  progress.csv
OUTPUT/ARR2026/SuperMarioKart-Snes-2025-11-05_08-35-01/: 0.monitor.csv  2.monitor.csv  4.monitor.csv  events.out.tfevents.1762349701.Sage.6924.0
OUTPUT/ARR2026/SuperMarioKart-Snes-2025-11-17_21-25-29/: 0.monitor.csv  1.monitor.csv  2.monitor.csv  3.monitor.csv  4.monitor.csv  5.monitor.csv  events.out.tfevents.1763432729.Sage.227920.0  koopa_script.lua  playback_trace00.csv  playback_trace01.csv  playback_trace02.csv  playback_trace03.csv  playback_trace04.csv  playback_trace05.csv  playback_trace06.csv  playback_trace07.csv  playback_trace08.csv  playback_trace09.csv  playback_trace10.csv  playback_trace11.csv  playback_trace12.csv  playback_trace13.csv  playback_trace14.csv  playback_trace15.csv  playback_trace16.csv  playback_trace17.csv  playback_trace18.csv  playback_trace19.csv  playback_trace20.csv  playback_trace21.csv  (+79 more)
rtamt_mario/: example_trace00.csv  mario_test.py  offline_dense_time_test.py
telex_mario/: test_mario.py
(+1445 files in other folders)
